# tthack-videohosting

./: .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  init_db.py  pyproject.toml
src/: config.py  db.py  init_db.py  main.py  models.py  repositories.py  schemas.py
src/blueprints/admin/: views.py
src/blueprints/video/: views.py
src/migrations/: env.py
src/migrations/versions/: 78002f2f7d18_create_users_videos.py  c8de9a496ae9_add_url_to_video.py  d441d5f71e99_create_users_videos.py
