[tool.poetry]
name = "tthack-videohosting"
version = "0.1.0"
description = ""
authors = ["bibiba <vyckluchi75@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
fastapi-jwt-auth = "^0.5.0"
uvicorn = "^0.21.1"
toml = "^0.10.2"
sqlalchemy-utils = "^0.40.0"
bcrypt = "^4.0.1"
psycopg2-binary = "^2.9.5"
alembic = "^1.10.2"
sqlalchemy = "1.4.42"
databases = "^0.7.0"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
